# Qwinto_Qwixx_Boardgame

./: Aesthetics.cpp  CMakeLists.txt  Colour.h  Dice.cpp  Dice.h  Main.cpp  Main.h  Player.h  Project.sln  QwintoRow.cpp  QwintoRow.h  QwintoRow.tpp  README.md  RandomDice.cpp  RandomDice.h  RollOfDice.cpp  RollOfDice.h  ScoreSheet.cpp  ScoreSheet.h  TEST_SCORESHEET.cpp  dice.cpp  main.cpp  player.cpp.cpp  scoresheet.cpp  scoresheet.h  work-distribution.csv
Project/: Player.h  Project.vcxproj  Project.vcxproj.filters  QwintoRow.cpp  ScoreSheet.cpp  ScoreSheet.h  TEST_SCORESHEET.cpp
Project/x64/Debug/: vc141.idb
Project/x64/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
